# gitext

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  build.rs
auth/: Cargo.toml
auth/src/: config.rs  lib.rs
bitbucket/: Cargo.toml
bitbucket/src/: client.rs  lib.rs  pull_request.rs  repo.rs  repo_id.rs  split_once.rs
bitbucket/src/pull_request/: user.rs
common_git/: Cargo.toml
common_git/src/: config.rs  credential_helper.rs  lib.rs
completion/: _gitext.sh
error/: Cargo.toml
error/src/: lib.rs
git-bucket/: Cargo.toml
git-bucket/src/: main.rs
gitbucket/: Cargo.toml  build.rs
gitbucket/src/: commands.rs  error.rs  lib.rs  main.rs
gitbucket/src/commands/: auth.rs  browse.rs  pr.rs  prs.rs  ticket.rs
gitbucket/src/commands/pr/: credential_helper.rs
gitbucket/src/commands/prs/: jira_client.rs
gitext/: Cargo.toml  build.rs
gitext/src/: commands.rs  lib.rs  main.rs
gitext/src/commands/: auth.rs  browse.rs  pr.rs  ticket.rs
http_client/src/: error.rs
http_client/tests/: get_custom.rs
install/: Makefile
src/: auth.rs  cli.rs  error.rs  jira.rs  lib.rs  main.rs  shellquote.rs
src/bitbucket/: build_status.rs  client.rs  mod.rs  pull_request.rs  repo.rs  repo_id.rs  user.rs
src/cli/: github_repo_id_parser.rs
src/commands/: ticket.rs
src/common_git/: config.rs  credential_helper.rs  mod.rs
src/gighub/: mod.rs
src/gighub/commands/: auth.rs  browse.rs  clone.rs  create.rs  pr.rs  prs.rs  switch.rs
src/git/: config.rs  mod.rs
src/git/git_cli/: branch.rs  clone.rs  fetch.rs
src/git/libgit2/: branch.rs  clone.rs  credential_helper.rs  fetch.rs
src/git/libgit2/clone/: formatter.rs  reporter.rs
src/gitbucket/commands/: auth.rs  browse.rs  create.rs  pr.rs  prs.rs  switch.rs
src/gitbucket/commands/prs/: jira_client.rs
src/github/: check_suite.rs  client.rs  mod.rs  pull_request.rs  repo.rs  repo_id.rs  user.rs
src/gitlab/: client.rs  mod.rs  pipeline.rs  pull_request.rs  repo_id.rs  user.rs
src/gitlad/: mod.rs
src/gitlad/commands/: auth.rs  browse.rs  pr.rs  prs.rs  switch.rs
