[package]
name = "gitext"
version = "0.1.0"
authors = ["Vladimir Burdukov <chippcheg@gmail.com>"]
edition = "2018"

[dependencies]
http_client = { git = "https://github.com/chipp/http_client", tag = "0.4.10" }
curl = { version = "0.4", features = ["static-ssl", "static-curl"] }
curl-sys = { version = "0.4", features = ["static-ssl", "spnego"]}

futures-executor = "0.3"

url = "2.0"
git2 = { version = "0.10", default-features = false }
dirs = "2.0"

auth = { git = "https://github.com/chipp/auth", tag = "2.0.0" }

serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
chrono-humanize = "0.0"

futures-util = "0.3"

regex = "1.3"
rpassword = "4.0"

prettytable-rs = "^0.8"
textwrap = { version = "0.12" }
