[package]
name = "gitext"
version = "0.1.0"
authors = ["Vladimir Burdukov <chippcheg@gmail.com>"]
edition = "2018"

[dependencies]
http_client = { git = "https://github.com/chipp/http_client", tag = "0.4.10" }
curl = { version = "0.4" }
curl-sys = { version = "0.4" }

futures = { version = "0.3", features = ["std"] }
tokio = { version = "1.36", features = ["macros", "rt-multi-thread"] }

clap = "4.5.1"

url = { version = "2.5", features = ["serde"] }
git2 = "0.18"
dirs = "5.0"

auth = { git = "https://github.com/chipp/auth", tag = "2.1.0" }

serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
chrono-humanize = "0.2"

futures-util = "0.3"

regex = "1.10"
rpassword = "7.3"

prettytable-rs = "^0.10"
textwrap = { version = "0.16", features = ["terminal_size", "hyphenation"] }
hyphenation = { version = "0.8", features = ["embed_en-us"] }

[dev-dependencies]
serde_json = "*"
