[package]
name = "gitext"
version = "0.1.0"
authors = ["Vladimir Burdukov <chippcheg@gmail.com>"]
edition = "2018"

[dependencies]
chipp_http = "1.2"
chipp_auth = "2.1"
jira_api = { git = "https://github.com/chipp/rs_jira_api", tag = "1.1.0" }

futures = { version = "0.3", features = ["std"] }
tokio = { version = "1.41", features = ["macros", "rt-multi-thread"] }

clap = "4.5.20"
anyhow = "1.0.91"

url = { version = "2.5", features = ["serde"] }
git2 = "0.19"
dirs = "5.0"

serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
chrono-humanize = "0.2"

futures-util = "0.3"

regex = "1.11"
rpassword = "7.3"

prettytable-rs = "^0.10"
textwrap = { version = "0.16", features = ["terminal_size", "hyphenation"] }
hyphenation = { version = "0.8", features = ["embed_en-us"] }

[dev-dependencies]
serde_json = "*"

[features]
default = ["git-cli"]
git-cli = []
