[package]
name = "auth"
version = "0.1.0"
authors = ["Vladimir Burdukov <chippcheg@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
security-framework = "0.3"
rpassword = "4.0"

serde = { version = "1.0", features = ["derive"] }
dirs = "2.0"
toml = "0.4"
