[package]
name = "bitbucket"
version = "0.1.0"
authors = ["Vladimir Burdukov <chippcheg@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
git2 = { version = "0.10", default-features = false }
dirs = "2.0"
url = "2.0"

auth = { path = "../auth" }
http_client = { path = "../http_client" }

serde = { version = "1.0", features = ["derive"] }

futures-util = "0.3"
