[package]
name = "bitbucket"
version = "0.1.0"
authors = ["Vladimir Burdukov <chippcheg@gmail.com>"]
edition = "2021"

[dependencies]
common_git = { path = "../common_git" }

git2 = { version = "0.10", default-features = false }
dirs = "2.0"
url = "2.0"

auth = { git = "https://github.com/chipp/auth", tag = "2.0.0" }
http_client = { git = "https://github.com/chipp/http_client", tag = "0.4.10" }
curl = { version = "0.4", features = ["static-ssl", "static-curl"] }

serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }

futures-util = "0.3"
