[package]
name = "common_git"
version = "0.1.0"
authors = ["Vladimir Burdukov <chippcheg@gmail.com>"]
edition = "2018"

[dependencies]
git2 = { version = "0.10", default-features = false }
dirs = "2.0"
url = "2.0"
regex = "1.3"
rpassword = "4.0"
auth = { git = "https://github.com/chipp/auth", tag = "2.0.0" }
