[package]
name = "error"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common_git = { path = "../common_git" }
http_client = { git = "https://github.com/chipp/http_client", tag = "0.4.10" }
url = "2.0"
