[package]
name = "gitbucket"
version = "0.1.0"
authors = ["Vladimir Burdukov <chippcheg@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitbucket = { path = "../bitbucket" }
http_client = { git = "https://github.com/chipp/http_client", tag = "0.4.7" }

futures-executor = "0.3"

git2 = "0.10"

auth = { path = "../auth" }
dirs = "2.0"
rpassword = "4.0"

url = "2.0"
regex = "1.3"
