[package]
name = "gitbucket"
version = "0.1.0"
edition = "2021"

[dependencies]

bitbucket = { path = "../bitbucket" }
common_git = { path = "../common_git" }
error = { path = "../error" }

auth = { git = "https://github.com/chipp/auth", tag = "2.0.0" }

http_client = { git = "https://github.com/chipp/http_client", tag = "0.4.10" }
curl = { version = "0.4", features = ["static-ssl", "static-curl"] }
curl-sys = { version = "0.4", features = ["static-ssl"]}
serde = { version = "1.0", features = ["derive"] }

git2 = "0.10"
url = "2.0"
dirs = "2.0"

prettytable-rs = "^0.8"
textwrap = { version = "0.12" }

chrono-humanize = "0.0"
chrono = "0.4"
