[package]
name = "gitext"
version = "0.1.0"
authors = ["Vladimir Burdukov <chippcheg@gmail.com>"]
edition = "2018"

[dependencies]
bitbucket = { path = "../bitbucket" }
common_git = { path = "../common_git" }
error = { path = "../error" }
gitbucket = { path = "../gitbucket" }

http_client = { git = "https://github.com/chipp/http_client", tag = "0.4.10" }
curl = { version = "0.4", features = ["static-ssl", "static-curl"] }
curl-sys = { version = "0.4", features = ["static-ssl", "spnego"]}

futures-executor = "0.3"

git2 = "0.10"

auth = { git = "https://github.com/chipp/auth", tag = "2.0.0" }

url = "2.0"
